<resources>
    <string name="app_name" translatable="false">"jtx Board"</string>
    <string name="app_permission_label">"jtx Board sync Journals, Notes &amp; Tasks"</string>
    <string name="app_permission_desc">"sync jtx Board content with other applications like DAVx⁵"</string>
    <string name="link_ffg" translatable="false">"https://www.ffg.at"</string>
    <string name="link_jtx" translatable="false">"https://jtx.techbee.at"</string>
    <string name="link_jtx_support" translatable="false">"https://jtx.techbee.at/support"</string>
    <string name="link_jtx_privacy_policy" translatable="false">"https://jtx.techbee.at/privacy"</string>
    <string name="link_jtx_terms" translatable="false">"https://jtx.techbee.at/terms-conditions"</string>
    <string name="font_roboto" translatable="false">"Roboto"</string>
    <string name="font_noto" translatable="false">"Noto"</string>
    <string name="font_montserrat_alternates" translatable="false">"Montserrat Alternates"</string>
    <string name="map_google_maps" translatable="false">"Google Maps"</string>
    <string name="map_osm" translatable="false">"Open Street Maps (OSM)"</string>
    <string name="save">"Save"</string>
    <string name="update">"Update"</string>
    <string name="cancel">"Cancel"</string>
    <string name="ok">"OK"</string>
    <string name="delete">"Delete"</string>
    <string name="discard">"Discard"</string>
    <string name="dismiss">"Dismiss"</string>
    <string name="open">"Open"</string>
    <string name="cont">"Continue"</string>
    <string name="website">"Website"</string>
    <string name="latitude">"Latitude"</string>
    <string name="longitude">"Longitude"</string>
    <string name="unlink">"Unlink"</string>
    <string name="off">"Off"</string>
    <string name="location_permission_denied">"Location permission denied"</string>
    <string name="permissions">"Permissions"</string>
    <string name="current_location">"Current location"</string>
    <string name="toolbar_text_add_journal">"Add Journal"</string>
    <string name="toolbar_text_add_note">"Add Note"</string>
    <string name="toolbar_text_add_task">"Add Task"</string>
    <string name="toast_sync_requested">"Synchronization requested"</string>
    <string name="default_local_collection_name">"Local"</string>
    <string name="default_local_account_name">"Local"</string>
    <string name="journal_status_draft">"Draft"</string>
    <string name="journal_status_final">"Final"</string>
    <string name="journal_status_cancelled">"Cancelled"</string>
    <string name="todo_status_needsaction">"Needs action"</string>
    <string name="todo_status_completed">"Completed"</string>
    <string name="todo_status_inprocess">"In process"</string>
    <string name="todo_status_cancelled">"Cancelled"</string>
    <string name="classification_public">"Public"</string>
    <string name="classification_private">"Private"</string>
    <string name="classification_confidential">"Confidential"</string>
    <string name="attendee_role_chair">"Chair"</string>
    <string name="attendee_role_required_participant">"Required participant"</string>
    <string name="attendee_role_optional_participant">"Optional participant"</string>
    <string name="attendee_role_non_participant">"Non-participant / Info"</string>
    <string name="navigation_drawer_open">"Open navigation drawer"</string>
    <string name="navigation_drawer_close">"Close navigation drawer"</string>
    <string name="navigation_drawer_board">"Board"</string>
    <string name="navigation_drawer_synchronization">"Synchronization"</string>
    <string name="navigation_drawer_about">"About / License"</string>
    <string name="navigation_drawer_subtitle">"journals, notes &amp; tasks"</string>
    <string name="navigation_drawer_settings">"Settings"</string>
    <string name="navigation_drawer_news_updates">"News &amp; updates"</string>
    <string name="navigation_drawer_external_links">"External links"</string>
    <string name="navigation_drawer_website">"Website"</string>
    <string name="navigation_drawer_support">"Support"</string>
    <string name="navigation_drawer_donate">"Donate"</string>
    <string name="navigation_drawer_privacy_policy">"Privacy Policy"</string>
    <string name="list_due_overdue">"Overdue"</string>
    <string name="list_due_shortly">"Due shortly"</string>
    <string name="list_due_today">"Due today"</string>
    <string name="list_due_tomorrow">"Due tomorrow"</string>
    <string name="list_due_within_7_days">"Due within 7 days"</string>
    <string name="list_due_inXhours">"Due in %d hours"</string>
    <string name="list_due_on_weekday">"Due on %s"</string>
    <string name="list_start_past">"Start in past"</string>
    <string name="list_start_shortly">"Start shortly"</string>
    <string name="list_start_today">"Planned start today"</string>
    <string name="list_start_tomorrow">"Start tomorrow"</string>
    <string name="list_start_inXhours">"Planned start in %d hours"</string>
    <string name="list_start_on_weekday">"Planned start on %s"</string>
    <string name="list_tabitem_journals">"Journals"</string>
    <string name="list_tabitem_notes">"Notes"</string>
    <string name="list_tabitem_todos">"Tasks"</string>
    <string name="list_expand">"Expand"</string>
    <string name="list_dialog_delete_selected_title">Delete selected entries?</string>
    <string name="list_dialog_delete_selected_message">This action deletes all selected entries (%1$d). Are you sure that you want to proceed? This operation cannot be undone!</string>
    <string name="list_quickadd_dialog_summary_description_hint">"Summary/Description"</string>
    <string name="list_quickadd_dialog_summary_description_helper">"The first line is interpreted as summary, the rest as description. Hashtags are interpreted as categories (eg #category)."</string>
    <string name="list_item_recurring">"Recurring entry"</string>
    <string name="list_item_edited_recurring">"Edited recurring entry"</string>
    <string name="list_scroll_to_top">"Scroll to top"</string>
    <string name="view_fragment_audio_permission">"App Permission"</string>
    <string name="view_fragment_audio_permission_message">"jtx Board needs the permission in order to record audio or use speech-to-text functionalities. Please grant the permission to use this feature."</string>
    <string name="view_reccurrence_note_is_exception">"This item is an exception to a recurring entry."</string>
    <string name="view_feedback_linked_notes">"Feedback / Linked Notes"</string>
    <string name="view_subtask_of">"Subtask of"</string>
    <string name="view_linked_note_of">"Linked note of"</string>
    <string name="view_add_audio_note">"Add audio"</string>
    <string name="view_created_text">"Created: %1$s"</string>
    <string name="view_last_modified_text">"Last modified: %1$s"</string>
    <string name="view_due">"Due"</string>
    <string name="view_completed">"Completed"</string>
    <string name="view_started">"Start(ed)"</string>
    <string name="edit_comment_helper">"Add a comment"</string>
    <string name="edit_attachment_button_text">"Add attachment"</string>
    <string name="edit_take_picture_button_text">"Take picture"</string>
    <string name="edit_add_link_button_text">"Add attachment link"</string>
    <string name="edit_subtasks_add_helper">"Add a subtask"</string>
    <string name="detail_top_app_bar_quick_add_subtask">"Quick add subtask"</string>
    <string name="detail_top_app_bar_quick_add_subnote">"Quick add subnote"</string>
    <string name="edit_attachment_add_link_dialog">"Add attachment link"</string>
    <string name="edit_recur_toast_requires_start_date">"Recurrence requires a start-date to be set!"</string>
    <string name="edit_datepicker_dialog_select_date">"Select date"</string>
    <string name="edit_date_range_picker_dialog_select_date_range">"Select date range"</string>
    <string name="edit_day_range_picker_dialog_select_day_range">"Select day range"</string>
    <string name="edit_day_range_picker_dialog_DATE_WITHIN">"Date within"</string>
    <string name="edit_day_range_picker_dialog_date_within_x_AND_x">"and"</string>
    <string name="edit_day_range_picker_dialog_date_within_x_and_x_DAYS">"day(s)"</string>
    <string name="edit_datepicker_dialog_add_time">"Add time"</string>
    <string name="edit_datepicker_dialog_edit_time">"Edit time"</string>
    <string name="edit_datepicker_dialog_add_timezone">"Add timezone"</string>
    <string name="edit_datepicker_dialog_edit_timezone">"Edit timezone"</string>
    <string name="edit_dialog_sure_to_delete_title">"Delete \"%1$s\"?"</string>
    <string name="edit_dialog_sure_to_discard_title">"Discard this entry?"</string>
    <string name="dialog_delete_done_title">"Delete all done tasks?"</string>
    <string name="dialog_delete_done_message">"Attention: Subtasks are deleted independent of their status if their parent is marked as done. This operation cannot be undone!"</string>
    <string name="edit_dialog_sure_to_delete_message">"Are you sure you want to delete \"%1$s\"?"</string>
    <string name="edit_dialog_sure_to_discard_message">"Are you sure you want to discard this entry? This entry will not be saved."</string>
    <string name="edit_validation_errors_dialog_due_date_before_dtstart">"The Due date cannot be on or before the Start date."</string>
    <string name="edit_fragment_app_permission">"App permission"</string>
    <string name="edit_fragment_app_permission_message">"jtx Board can suggest Attendee data based on your contacts as input values for your entries. Read Permissions on your contacts is needed to enable this feature."</string>
    <string name="about_tabitem_jtx" translatable="false">"jtx Board"</string>
    <string name="about_tabitem_translations">"Translations"</string>
    <string name="about_tabitem_libraries">"Libraries"</string>
    <string name="about_tabitem_contributors">"Contributors"</string>
    <string name="about_special_thanks">"Special thanks"</string>
    <string name="about_app_version">"Version: %1$s (%2$d)"</string>
    <string name="about_app_codename">"Codename: %1$s"</string>
    <string name="about_app_copyright" translatable="false">"© Techbee e.U."</string>
    <string name="about_app_terms">"Terms &amp; Conditions"</string>
    <string name="about_thanks_ffg">"Special thanks to FFG for their trust and financial support to realize this project."</string>
    <string name="menu_list_gotodate">"Go to date"</string>
    <string name="menu_list_quick_journal">"Quick Journal"</string>
    <string name="menu_list_quick_note">"Quick Note"</string>
    <string name="menu_list_quick_todo">"Quick Todo"</string>
    <string name="menu_view_share_ics">"Share as .ics"</string>
    <string name="menu_view_copy_as_journal">"Copy as Journal"</string>
    <string name="menu_view_copy_as_todo">"Copy as Todo"</string>
    <string name="menu_view_copy_as_note">"Copy as Note"</string>
    <string name="donate_thank_you">"Thank you!"</string>
    <string name="donate_donate_with">"Donate with"</string>
    <string name="donate_other_donation_methods">"If you would like to consider any other donation method, please check our website:"</string>
    <string name="about_translations_basic_info">"jtx Board is an open source app that appreciates the participation and contribution of the open source community. On this page we would like to attribute the efforts of community members for translations."</string>
    <string name="about_translations_contribution_info">"If you would like to edit/add translations or add new languages to this app, feel free to join the jtx Board project on the translation platform Crowdin:"</string>
    <string name="about_translations_contribution_button">"Join on Crowdin.com"</string>
    <string name="navigation_drawer_collections">"Collections"</string>
    <string name="navigation_drawer_website_news">"News &amp; Release Notes"</string>
</resources>