<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Techbee e.U.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/about_translations_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_about_translations_basicinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/about_translations_basic_info"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/fragment_about_translations_contribution_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/about_translations_contribution_info"
                android:textAlignment="center"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/fragment_about_translations_button_poeditor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/about_translations_contribution_button"
                android:visibility="gone"
                tools:visibility="visible" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>